[package]
name = "vortex-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["macros"] }
chrono = { version = "0.4.39", features = ["serde"] }
dotenvy = "0.15.0"
mongodb = "3.2.1"
serde = "1.0.217"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = {version = "0.6.2", features = ["cors","trace"] }
uuid = { version = "1.13.1", features = ["serde", "v4"] }
webauthn-rs = { version = "0.5.1", features = [
    "danger-allow-state-serialisation", "danger-credential-internals"
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2.0"
tower-sessions = "0.14.0"
thiserror = "2.0.11"
base64 = "0.22.1"
axum-extra = {version="0.10.0", features=["typed-header"]}
futures = "0.3.31"
tokio-stream = "0.1.17"
jsonwebtoken = "9.3.1"
